Added Api endpoints to api-docs
